tests/ui/inference/str-as-char-non-lit.stderr
error[E0308]: mismatched types
  --> $DIR/str-as-char-non-lit.rs:6:19
   |
LL |     let _: &str = ('a');
   |            ----   ^^^^^ expected `&str`, found `char`
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/str-as-char-non-lit.rs:8:19
   |
LL |     let _: &str = token();
   |            ----   ^^^^^^^ expected `&str`, found `char`
   |            |
   |            expected due to this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
